# LanSync

./: .gitignore  README.md  go.mod  go.sum
clients/qt-lansync/: CMakeLists.txt  README.md
clients/qt-lansync/src/app/: main.cpp
clients/qt-lansync/src/core/: SyncEngine.cpp  SyncEngine.h
clients/qt-lansync/src/filesystem/: FileIndexer.cpp  FileIndexer.h  FileWatcher.cpp  FileWatcher.h
clients/qt-lansync/src/network/: MdnsDiscovery.cpp  MdnsDiscovery.h  NetInterface.h  Transport.cpp  Transport.h
clients/qt-lansync/src/protocol/: Protocol.cpp  Protocol.h
clients/qt-lansync/src/ui/: MainWindow.cpp  MainWindow.h
cmd/lansync/: integration_test.go  main.go  signal_unix.go  signal_windows.go
cmd/lansync-gui/: main.go
internal/discovery/: mdns.go  mdns_test.go
internal/indexer/: indexer.go  indexer_test.go  modol.go
internal/protocol/: message.go  message_test.go
internal/transport/: Document.md  transport.go  transport_test.go  transport_utils.go
internal/watcher/: watcher.go  watcher_test.go
